[tool.poetry]
name = "sasacommon"
version = "0.1.21"
description = ""
authors = ["Marco Pavanelli <marco.pavanelli@sasabz.it>"]
readme = "README.md"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3"
setuptools = "^72.1.0"
wheel = "^0.44.0"

